--- a/src/app/components/first/single/single.component.html
+++ b/src/app/components/first/single/single.component.html
@@ -7,7 +7,7 @@
 </nz-steps>
 
 <div class="steps-content">
-  <app-one *ngIf="index === 0"></app-one>
+  <app-one *ngIf="index === 0" #one></app-one>
   <app-two *ngIf="index === 1"></app-two>
   <app-three *ngIf="index === 2"></app-three>
   <app-four *ngIf="index === 3"></app-four>
