--- a/src/app/components/data/data.component.html
+++ b/src/app/components/data/data.component.html
@@ -1,17 +1,17 @@
 <div nz-row nzGutter="16" class="table-operations">
   <div nz-col class="gutter-row" nzSpan="6" [nzPush]=1>
     <nz-input-group nzSearch [nzAddOnAfter]="suffixIconButton">
-      <input type="text" nz-input placeholder="input search text" />
+      <input type="text" nz-input placeholder="input search text" [(ngModel)]="searchValue" />
     </nz-input-group>
     <ng-template #suffixIconButton>
-      <button nz-button nzType="primary" nzSearch><i nz-icon nzType="search"></i></button>
+      <button nz-button nzType="primary" nzSearch (click)="getResultBySearchName()"><i nz-icon nzType="search"></i></button>
     </ng-template>
   </div>
   <div nz-col class="gutter-row" nzSpan="3" nzOffset="15">
     <button class="button" nz-button >导出</button>
   </div>
   <div nz-col nzSpan="22" [nzPush]=1>
-    <nz-table #filterTable [nzData]="listOfDisplayData">
+    <nz-table #filterTable [nzData]="listOfData">
       <thead>
       <tr>
         <th>企业ID</th>
