--- a/src/app/components/info/info.component.html
+++ b/src/app/components/info/info.component.html
@@ -5,7 +5,7 @@
     <nz-page-header-footer>
       <nz-tabset [nzSelectedIndex]="0">
         <nz-tab nzTitle="基本信息" >
-          <app-bi></app-bi>
+          <app-bi [id]="info"></app-bi>
         </nz-tab>
         <nz-tab nzTitle="无形资产" >
           <app-ia></app-ia>
