--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,9 +24,11 @@
           <i nz-icon nzType="file"></i>
           <span>数据可视化</span>
         </li>
-        <li nz-menu-item>
-          <i nz-icon nzType="file"></i>
-          <span>xxx</span>
+        <li nz-submenu nzTitle="数据可视化" nzIcon="team">
+          <ul>
+            <li nz-menu-item routerLink="/china">地图</li>
+            <li nz-menu-item>Team 2</li>
+          </ul>
         </li>
       </ul>
     </nz-sider>
