--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,7 +27,7 @@
         <li nz-submenu nzTitle="数据可视化" nzIcon="team">
           <ul>
             <li nz-menu-item routerLink="/china">地图</li>
-            <li nz-menu-item>Team 2</li>
+            <li nz-menu-item routerLink="/relation">关系图</li>
           </ul>
         </li>
       </ul>
