--- a/src/app/components/echarts-line/echarts-line.component.html
+++ b/src/app/components/echarts-line/echarts-line.component.html
@@ -1,2 +1,2 @@
-<div echarts [options]="lineOption" (chartInit)="onChartInit($event)" class="echar-line"></div>
+<div echarts [options]="lineOption" (chartInit)="onChartInit($event)" (chartClick)="getDemo($event)" class="echar-line"></div>
 
