--- a/src/app/components/info/ia/ia.component.html
+++ b/src/app/components/info/ia/ia.component.html
@@ -1,29 +1,1 @@
-<form nz-form>
-  <div nz-row [nzGutter]="24">
-    <div nz-col [nzSpan]="6" [nzPush]=2>
-      <nz-form-item nzFlex>
-        <nz-form-label >专利</nz-form-label>
-        <nz-form-control>
-          1
-        </nz-form-control>
-      </nz-form-item>
-    </div>
-    <div nz-col [nzSpan]="6" [nzPush]=2>
-      <nz-form-item nzFlex>
-        <nz-form-label >商标</nz-form-label>
-        <nz-form-control>
-          1
-        </nz-form-control>
-      </nz-form-item>
-    </div>
-    <div nz-col [nzSpan]="6" [nzPush]=2>
-      <nz-form-item nzFlex>
-        <nz-form-label >著作权</nz-form-label>
-        <nz-form-control>
-          1
-        </nz-form-control>
-      </nz-form-item>
-    </div>
-  </div>
-</form>
-
+<div echarts [options]="iaOption" (chartInit)="onEchartInit($event)"  style="min-height: 400px"   > </div>
