--- a/src/app/components/echarts-sunburst/echarts-sunburst.component.html
+++ b/src/app/components/echarts-sunburst/echarts-sunburst.component.html
@@ -1,1 +1,1 @@
-<div echarts [options]="sunburstOption" (chartInit)="onChartInit($event)"></div>
+<div echarts [options]="sunburstOption" (chartInit)="onChartInit($event)" style="min-height: 600px"></div>
