--- a/src/app/components/echartts/echartts.component.html
+++ b/src/app/components/echartts/echartts.component.html
@@ -1,17 +1,16 @@
-<div nz-row nzGutter="24" style="margin-top: 15px;margin-left: 30px;margin-right: 30px; margin-bottom: 20px">
+<div nz-row nzGutter="24" style="margin-top: 15px;margin-left: 30px;margin-right: 30px; margin-bottom: 20px; padding-bottom: 28px">
 
   <div nz-col class="gutter-row" nzSpan="11" [nzPush] = 1>
     <app-echarts-line  ></app-echarts-line>
 
   </div>
-  <div nz-col class="gutter-row" nzSpan="11" [nzPush] = 1>
-    <app-echarts-sunburst ></app-echarts-sunburst>
-
-  </div>
   <div nz-col class="gutter-row" nzSpan="11" [nzPush]= 1>
     <app-echarts-pip></app-echarts-pip>
   </div>
-  <div nz-col class="gutter-row" nzSpan="22" [nzPush]=1 style="min-height: 1000px">
-    <app-echart-relation style="min-height: 800px"></app-echart-relation>
+  <div nz-col class="gutter-row " style="background:#fff;min-height: 100px" nzSpan="22" [nzPush] = 1 >
+    这是写建议和结论
+  </div>
+  <div nz-col class="gutter-row" nzSpan="22" [nzPush] = 1 style="min-height: 600px">
+    <app-echarts-sunburst ></app-echarts-sunburst>
   </div>
 </div>
