--- a/src/app/components/info/bc/bc.component.html
+++ b/src/app/components/info/bc/bc.component.html
@@ -1,47 +1,1 @@
-<form nz-form>
-  <div nz-row [nzGutter]="24">
-    <div nz-col [nzSpan]="8" [nzPush]=2>
-      <nz-form-item nzFlex>
-        <nz-form-label >营业总收入</nz-form-label>
-        <nz-form-control>
-          1
-        </nz-form-control>
-      </nz-form-item>
-    </div>
-    <div nz-col [nzSpan]="8" [nzPush]=2>
-      <nz-form-item nzFlex>
-        <nz-form-label >主营业收入</nz-form-label>
-        <nz-form-control>
-          1
-        </nz-form-control>
-      </nz-form-item>
-    </div>
-    <div nz-col [nzSpan]="8" [nzPush]=2>
-      <nz-form-item nzFlex>
-        <nz-form-label >利润总额</nz-form-label>
-        <nz-form-control>
-          1
-        </nz-form-control>
-      </nz-form-item>
-    </div>
-    <div nz-col [nzSpan]="8" [nzPush]=2>
-      <nz-form-item nzFlex>
-        <nz-form-label >净利润</nz-form-label>
-        <nz-form-control>
-          1
-        </nz-form-control>
-      </nz-form-item>
-    </div>
-    <div nz-col [nzSpan]="8" [nzPush]=2>
-      <nz-form-item nzFlex>
-        <nz-form-label >纳税总额</nz-form-label>
-        <nz-form-control>
-          1
-        </nz-form-control>
-      </nz-form-item>
-    </div>
-
-
-  </div>
-</form>
-
+<div echarts [options]="bcOption" (chartInit)="onEchartInit($event)"  style="min-height: 400px"   > </div>
