--- a/src/app/components/info/bs/bs.component.html
+++ b/src/app/components/info/bs/bs.component.html
@@ -1,23 +1,1 @@
-<form nz-form>
-  <div nz-row [nzGutter]="24">
-    <div nz-col [nzSpan]="8" [nzPush]=2>
-      <nz-form-item nzFlex>
-        <nz-form-label >资产总额</nz-form-label>
-        <nz-form-control>
-          1
-        </nz-form-control>
-      </nz-form-item>
-    </div>
-    <div nz-col [nzSpan]="8" [nzPush]=2>
-      <nz-form-item nzFlex>
-        <nz-form-label >负债总额</nz-form-label>
-        <nz-form-control>
-          1
-        </nz-form-control>
-      </nz-form-item>
-    </div>
-
-
-  </div>
-</form>
-
+<div echarts [options]="bsOption" (chartInit)="onEchartInit($event)"  style="min-height: 400px"   > </div>
