--- a/src/app/components/info/fc/fc.component.html
+++ b/src/app/components/info/fc/fc.component.html
@@ -1,15 +1,3 @@
-<form nz-form>
-  <div nz-row [nzGutter]="24">
-    <div nz-col [nzSpan]="8" [nzPush]=2>
-      <nz-form-item nzFlex>
-        <nz-form-label >债卷融资</nz-form-label>
-        <nz-form-control>
-          1
-        </nz-form-control>
-      </nz-form-item>
-    </div>
-
-
-  </div>
-</form>
-
+<div>
+  <div echarts [options]="fcOption" (chartInit)="onEchartInit($event)"  style="min-height: 400px"   > </div>
+</div>
