--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,14 +20,12 @@
           <span>数据中心</span>
         </li>
 
-        <li nz-menu-item routerLink="/echartts">
-          <i nz-icon nzType="file"></i>
-          <span>数据可视化</span>
-        </li>
+
         <li nz-submenu nzTitle="数据可视化" nzIcon="team">
           <ul>
             <li nz-menu-item routerLink="/china">地图</li>
             <li nz-menu-item routerLink="/relation">关系图</li>
+            <li nz-menu-item routerLink="/echartts">行业图</li>
           </ul>
         </li>
       </ul>
