--- a/src/app/components/info/bi/bi.component.html
+++ b/src/app/components/info/bi/bi.component.html
@@ -8,14 +8,14 @@
     </div>
   </div>
   <div class="main">
-    <nz-descriptions [nzColumn]="7">
-      <nz-descriptions-item nzTitle="企业名称" [nzSpan]="1" >zimo</nz-descriptions-item>
-      <nz-descriptions-item nzTitle="行业" [nzSpan]="6"><a>421421</a></nz-descriptions-item>
-      <nz-descriptions-item nzTitle="地区" [nzSpan]="1">北京</nz-descriptions-item>
-      <nz-descriptions-item nzTitle="注册时间" [nzSpan]="6">2017-10-10</nz-descriptions-item>
-      <nz-descriptions-item nzTitle="企业类型" [nzSpan]="1">1</nz-descriptions-item>
-      <nz-descriptions-item nzTitle="控制人类型" [nzSpan]="1">1</nz-descriptions-item>
-      <nz-descriptions-item nzTitle="控制人持股" [nzSpan]="1">1</nz-descriptions-item>
+    <nz-descriptions [nzColumn]="6">
+      <nz-descriptions-item nzTitle="企业名称" [nzSpan]="1" >{{zombie.id}}</nz-descriptions-item>
+      <nz-descriptions-item nzTitle="行业" [nzSpan]="5"><a>{{zombie.tradeName}}</a></nz-descriptions-item>
+      <nz-descriptions-item nzTitle="地区" [nzSpan]="1">{{zombie.areaName}}</nz-descriptions-item>
+      <nz-descriptions-item nzTitle="注册时间" [nzSpan]="5">{{zombie.registerTime | date: 'yyyy-MM-dd'}}-10-10</nz-descriptions-item>
+      <nz-descriptions-item nzTitle="企业类型" [nzSpan]="1">{{zombie.typeName}}</nz-descriptions-item>
+      <nz-descriptions-item nzTitle="控制人类型" [nzSpan]="1">{{zombie.controlType}}</nz-descriptions-item>
+      <nz-descriptions-item nzTitle="控制人持股" [nzSpan]="1">{{zombie.controlRatio}}</nz-descriptions-item>
     </nz-descriptions>
   </div>
 </div>
