--- a/src/app/components/first/single/two/two.component.html
+++ b/src/app/components/first/single/two/two.component.html
@@ -4,7 +4,7 @@
       <nz-form-item>
         <nz-form-label [nzSpan]="6" >专利数</nz-form-label>
         <nz-form-control [nzSpan]="6">
-          <nz-input-number  formControlName="book" [nzSize]="100" ></nz-input-number>
+          <nz-input-number  formControlName="patent" [nzSize]="100" ></nz-input-number>
         </nz-form-control>
       </nz-form-item >
     </div>
@@ -12,7 +12,7 @@
       <nz-form-item>
         <nz-form-label [nzSpan]="6">商标数</nz-form-label>
         <nz-form-control [nzSpan]="6">
-          <nz-input-number  formControlName="book" [nzSize]="100" ></nz-input-number>
+          <nz-input-number  formControlName="trademark" [nzSize]="100" ></nz-input-number>
         </nz-form-control>
       </nz-form-item >
     </div>
