--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,7 @@
           <i nz-icon nzType="user"></i>
           <span>企业判定</span>
         </li>
-        <li nz-menu-item routerLink="/result">
+        <li nz-menu-item [routerLink]="['/result/0']"  >
           <i nz-icon nzType="file"></i>
           <span>判定结果</span>
         </li>
