--- a/src/app/components/echartts/echartts.component.html
+++ b/src/app/components/echartts/echartts.component.html
@@ -7,8 +7,11 @@
   <div nz-col class="gutter-row" nzSpan="11" [nzPush]= 1>
     <app-echarts-pip></app-echarts-pip>
   </div>
-  <div nz-col class="gutter-row " style="background:#fff;min-height: 100px" nzSpan="22" [nzPush] = 1 >
-    这是写建议和结论
+  <div nz-col class="gutter-row " style="background:#fff;min-height: 100px; left: 60px; width: 996px" nzSpan="22" [nzPush] = 1 >
+     <span>
+             这是写建议和结论
+
+     </span>
   </div>
   <div nz-col class="gutter-row" nzSpan="22" [nzPush] = 1 style="min-height: 600px">
     <app-echarts-sunburst ></app-echarts-sunburst>
