--- a/src/app/components/show-echarts/chain-card/chain-card.component.html
+++ b/src/app/components/show-echarts/chain-card/chain-card.component.html
@@ -1,8 +1,29 @@
-<nz-col [nzSpan]="8" >
+<nz-col [nzSpan]="12" class="left">
   <nz-card>
     <nz-statistic
       [nzValue]="11 "
-      [nzTitle]="'现存僵尸企业'"
+      [nzTitle]="'僵尸企业'"
+      [nzValueStyle]="{ color: 'blue' }"
+    >
+    </nz-statistic>
+  </nz-card>
+</nz-col>
+<nz-col [nzSpan]="12" class="right">
+  <nz-card>
+    <nz-statistic
+      [nzValue]="11 "
+      [nzTitle]="'疑似僵尸企业'"
+      [nzValueStyle]="{ color: 'blue' }"
+    >
+    </nz-statistic>
+  </nz-card>
+</nz-col>
+
+<nz-col [nzSpan]="8" class="left">
+  <nz-card>
+    <nz-statistic
+      [nzValue]="11 "
+      [nzTitle]="'建议破产清退'"
       [nzValueStyle]="{ color: 'blue' }"
     >
     </nz-statistic>
@@ -12,47 +33,17 @@
   <nz-card>
     <nz-statistic
       [nzValue]="11 "
-      [nzTitle]="'现存疑似僵尸企业'"
+      [nzTitle]="'建议兼并重组'"
       [nzValueStyle]="{ color: 'blue' }"
     >
     </nz-statistic>
   </nz-card>
 </nz-col>
-<nz-col [nzSpan]="8">
+<nz-col [nzSpan]="8" class="right">
   <nz-card>
     <nz-statistic
       [nzValue]="11 "
-      [nzTitle]="'现存重症僵尸企业'"
-      [nzValueStyle]="{ color: 'blue' }"
-    >
-    </nz-statistic>
-  </nz-card>
-</nz-col>
-<nz-col [nzSpan]="8">
-  <nz-card>
-    <nz-statistic
-      [nzValue]="11 "
-      [nzTitle]="'累计僵尸企业'"
-      [nzValueStyle]="{ color: 'blue' }"
-    >
-    </nz-statistic>
-  </nz-card>
-</nz-col>
-<nz-col [nzSpan]="8">
-  <nz-card>
-    <nz-statistic
-      [nzValue]="11 "
-      [nzTitle]="'已兼并重组'"
-      [nzValueStyle]="{ color: 'blue' }"
-    >
-    </nz-statistic>
-  </nz-card>
-</nz-col>
-<nz-col [nzSpan]="8">
-  <nz-card>
-    <nz-statistic
-      [nzValue]="11 "
-      [nzTitle]="'新生企业'"
+      [nzTitle]="'建议注销成立'"
       [nzValueStyle]="{ color: 'blue' }"
     >
     </nz-statistic>
