数据中心筛选

--- a/src/app/components/show-echarts/chain-card/chain-card.component.html
+++ b/src/app/components/show-echarts/chain-card/chain-card.component.html
@@ -43,7 +43,7 @@
   <nz-card>
     <nz-statistic
       [nzValue]="11 "
-      [nzTitle]="'建议注销成立'"
+      [nzTitle]="'建议扶持发展'"
       [nzValueStyle]="{ color: 'blue' }"
     >
     </nz-statistic>
