--- a/src/app/components/show-echarts/chain-table/chain-table.component.html
+++ b/src/app/components/show-echarts/chain-table/chain-table.component.html
@@ -5,7 +5,7 @@
     <th >僵尸企业</th>
     <th >建议破产</th>
     <th >建议兼并重组</th>
-    <th >建议注销成立</th>
+    <th >建议扶持发展</th>
   </tr>
   </thead>
   <tbody>
