--- a/src/app/components/data/data.component.html
+++ b/src/app/components/data/data.component.html
@@ -14,7 +14,9 @@
       <thead>
       <tr>
         <th>企业ID</th>
-        <th >是否为僵尸企业</th>
+        <th  nzShowFilter
+             [nzFilters]="listOfIs"
+             (nzFilterChange)="filter( $event)">是否为僵尸企业</th>
         <th>预警级别</th>
         <th>整改意见</th>
       </tr>
