--- a/src/app/components/info/info.component.html
+++ b/src/app/components/info/info.component.html
@@ -3,7 +3,29 @@
   <nz-page-header (nzBack)="goBack()" class="inner-content" nz-col class="gutter-row" nzSpan="22" [nzPush]=1 nzBackIcon>
     <nz-page-header-title>企业全息画像</nz-page-header-title>
       <nz-page-header-content>
-        <app-bi></app-bi>
+        <div class="content">
+          <div class="extra">
+            <div>
+              <img
+                src="https://gw.alipayobjects.com/mdn/mpaas_user/afts/img/A*KsfVQbuLRlYAAAAAAAAAAABjAQAAAQ/original"
+                alt="content"
+              />
+            </div>
+          </div>
+          <div class="main">
+            <nz-descriptions [nzColumn]="6">
+              <nz-descriptions-item nzTitle="企业名称" [nzSpan]="2" >{{zombie.id}}</nz-descriptions-item>
+              <nz-descriptions-item nzTitle="行业" [nzSpan]="4"><a>{{zombie.tradeName}}</a></nz-descriptions-item>
+              <nz-descriptions-item nzTitle="地区" [nzSpan]="2">{{zombie.areaName}}</nz-descriptions-item>
+              <nz-descriptions-item nzTitle="注册时间" [nzSpan]="4">{{zombie.registerTime }}</nz-descriptions-item>
+              <nz-descriptions-item nzTitle="企业类型" [nzSpan]="2">{{zombie.typeName}}</nz-descriptions-item>
+              <nz-descriptions-item nzTitle="控制人类型" [nzSpan]="2">{{zombie.controlType}}</nz-descriptions-item>
+              <nz-descriptions-item nzTitle="控制人持股" [nzSpan]="1">{{zombie.controlRatio}}</nz-descriptions-item>
+            </nz-descriptions>
+          </div>
+        </div>
+
+
       </nz-page-header-content>
 
   </nz-page-header>
