数据中心筛选

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,7 +15,7 @@
           <i nz-icon nzType="file"></i>
           <span>判定结果</span>
         </li>
-        <li nz-menu-item routerLink="/data">
+        <li nz-menu-item [routerLink]="['/data/0']">
           <i nz-icon nzType="file"></i>
           <span>数据中心</span>
         </li>
