--- a/src/app/components/echartts/echartts.component.html
+++ b/src/app/components/echartts/echartts.component.html
@@ -9,8 +9,7 @@
   </div>
   <div nz-col class="gutter-row " style="background:#fff;min-height: 100px; left: 60px; width: 996px" nzSpan="22" [nzPush] = 1 >
      <span>
-             这是写建议和结论
-
+            {{advice}}
      </span>
   </div>
   <div nz-col class="gutter-row" nzSpan="22" [nzPush] = 1 style="min-height: 600px">
