--- a/src/app/components/info/fc/fc.component.html
+++ b/src/app/components/info/fc/fc.component.html
@@ -1,3 +1,3 @@
 <div>
-  <div echarts [options]="fcOption" (chartInit)="onEchartInit($event)"  style="min-height: 400px"   > </div>
+  <div echarts id="echarts" [options]="fcOption" (chartInit)="onEchartInit($event)"  style="min-height: 400px"   > </div>
 </div>
