--- a/src/app/components/show-echarts/show-echarts.component.html
+++ b/src/app/components/show-echarts/show-echarts.component.html
@@ -13,7 +13,7 @@
     </nz-col>
     <nz-col nzSpan="24">
       <div class="inner-content" style="min-height: 100px">
-        <div>aaaaaaa</div>
+        <div>{{advice}}</div>
       </div>
     </nz-col>
   </nz-row>
