--- a/src/app/components/info/info.component.html
+++ b/src/app/components/info/info.component.html
@@ -45,6 +45,9 @@
         <li nz-menu-item (click)="getIn()" routerLink="./bc">
           营业情况
         </li>
+        <li nz-menu-item routerLink="./rish">
+          风险
+        </li>
       </ul>
       <div style="min-height: 200px">
         <router-outlet></router-outlet>
