--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,25 +8,25 @@
       <ul nz-menu nzTheme="dark" nzMode="inline" [nzInlineCollapsed]="isCollapsed">
 
         <li nz-menu-item routerLink="/first/single">
-          <i nz-icon nzType="user"></i>
           <span>企业判定</span>
         </li>
         <li nz-menu-item [routerLink]="['/result/0']"  >
-          <i nz-icon nzType="file"></i>
           <span>判定结果</span>
         </li>
         <li nz-menu-item [routerLink]="['/data/0']">
-          <i nz-icon nzType="file"></i>
           <span>数据中心</span>
         </li>
 
 
-        <li nz-submenu nzTitle="数据可视化" nzIcon="team">
+        <li nz-submenu nzTitle="数据可视化" >
           <ul>
             <li nz-menu-item routerLink="/china">地图</li>
             <li nz-menu-item routerLink="/relation">关系图</li>
             <li nz-menu-item routerLink="/echartts">行业图</li>
           </ul>
+        </li>
+        <li nz-menu-item routerLink="/again" >
+          <span>模型再训练</span>
         </li>
       </ul>
     </nz-sider>
